# deg-disk

./: CMakeLists.txt
include/: builder.h  defaults.h  disk.h  disk_util.h  index.h
src/: component_route.cpp  disk.cpp  disk_index.cpp  disk_search.cpp
test/: CMakeLists.txt  main.cpp
